--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ section::before
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#000,#0f0,#000);
+  background: linear-gradient(#000, lime,#000);
   animation: animate 5s linear infinite;
 }
 @keyframes animate 
@@ -58,7 +58,7 @@ section span
 }
 section span:hover 
 {
-  background: #0f0;
+  background: lime;
   transition: 0s;
 }
 
@@ -88,7 +88,7 @@ section .signin .content
 section .signin .content h2 
 {
   font-size: 2em;
-  color: #0f0;
+  color: lime;
   text-transform: uppercase;
 }
 section .signin .content .form 
@@ -147,7 +147,7 @@ section .signin .content .form .inputBox i
 }
 .signin .content .form .links a:nth-child(2)
 {
-  color: #0f0;
+  color: lime;
   font-weight: 600;
 }
 .signin .content .form .inputBox input[type="submit"]
